--- a/package.json
+++ b/package.json
@@ -9,118 +9,16 @@
     "categories": [
         "Extension Packs"
     ],
-    "extensionPack": [ 
-        "aaron-bond.better-comments", 
-        "actboy168.tasks", 
-        "akamud.vscode-theme-onedark", 
-        "alefragnani.Bookmarks", 
-        "alefragnani.project-manager", 
-        "Angular.ng-template", 
-        "anweber.statusbar-commands", 
-        "appland.appmap", 
-        "arthurwang.vsc-prolog", 
-        "axetroy.vscode-package-manager", 
-        "batisteo.vscode-django", 
-        "bradlc.vscode-tailwindcss", 
-        "christian-kohler.npm-intellisense", 
-        "christian-kohler.path-intellisense", 
-        "cnshenj.vscode-task-manager", 
-        "codezombiech.gitignore", 
-        "cweijan.vscode-database-client2", 
-        "danileao.css-variables-autocomplete", 
-        "Dart-Code.dart-code", 
-        "Dart-Code.flutter", 
-        "dbaeumer.vscode-eslint", 
-        "dhruv.maven-dependency-explorer", 
-        "dongli.python-preview", 
-        "donjayamanne.githistory", 
-        "donjayamanne.python-environment-manager", 
-        "DotJoshJohnson.xml", 
-        "dsznajder.es7-react-js-snippets", 
-        "eamodio.gitlens", 
-        "ecmel.vscode-html-css", 
-        "eg2.vscode-npm-script", 
-        "emilylilylime.vscode-test-explorer-diagnostics", 
-        "esbenp.prettier-vscode", 
-        "evald24.vscode-extension-profiles", 
-        "firsttris.vscode-jest-runner", 
-        "formulahendry.auto-close-tag", 
-        "formulahendry.auto-rename-tag", 
-        "formulahendry.code-runner", 
-        "foxundermoon.shell-format", 
-        "fwcd.kotlin", 
-        "GitHub.codespaces", 
-        "GitHub.copilot", 
-        "GitHub.github-vscode-theme", 
-        "GitHub.remotehub", 
-        "GitHub.vscode-pull-request-github", 
-        "GraphQL.vscode-graphql", 
-        "hbenl.vscode-test-explorer", 
-        "hbenl.vscode-test-explorer-liveshare", 
-        "hediet.debug-visualizer", 
-        "humao.rest-client", 
-        "jeff-hykin.better-shellscript-syntax", 
-        "kavod-io.vscode-jest-test-adapter", 
-        "KevinRose.vsc-python-indent", 
-        "littlefoxteam.vscode-python-test-adapter", 
-        "lostintangent.vsls-whiteboard", 
-        "mads-hartmann.bash-ide-vscode", 
-        "magicstack.MagicPython", 
-        "markis.code-coverage", 
-        "mhutchie.git-graph", 
-        "miguelsolorio.fluent-icons", 
-        "mikestead.dotenv", 
-        "ms-edgedevtools.vscode-edge-devtools", 
-        "ms-python.python", 
-        "ms-python.vscode-pylance", 
-        "ms-toolsai.jupyter-keymap", 
-        "ms-toolsai.jupyter-renderers", 
-        "ms-vscode-remote.remote-containers", 
-        "ms-vscode-remote.remote-ssh", 
-        "ms-vscode-remote.remote-ssh-edit", 
-        "ms-vscode.cpptools", 
-        "ms-vscode.remote-repositories", 
-        "ms-vscode.test-adapter-converter", 
-        "ms-vsliveshare.vsliveshare", 
-        "ms-vsliveshare.vsliveshare-audio", 
-        "ms-vsliveshare.vsliveshare-pack", 
-        "naco-siren.gradle-language", 
-        "naumovs.color-highlight", 
-        "njpwerner.autodocstring", 
-        "nrwl.angular-console", 
-        "Orta.vscode-jest", 
-        "piousdeer.adwaita-theme", 
-        "PKief.material-icon-theme", 
-        "ply-ct.vscode-ply", 
-        "pranaygp.vscode-css-peek", 
-        "Prisma.prisma", 
-        "rangav.vscode-thunder-client", 
-        "redhat.fabric8-analytics", 
-        "redhat.java", 
-        "redhat.vscode-xml", 
-        "ReliableWebhook.ReliableWebhook", 
-        "richardwillis.vscode-gradle-extension-pack", 
-        "ritwickdey.LiveServer", 
-        "rogalmic.bash-debug", 
-        "scala-lang.scala", 
-        "scala-lang.scala-snippets", 
-        "scalameta.metals", 
-        "selcuk-usta.code-complexity-report-generator", 
-        "shengchen.vscode-checkstyle", 
-        "slightc.pip-manager", 
-        "smarschollek.vscode-react-scripts-test-adapter", 
-        "spmeesseman.vscode-taskexplorer", 
-        "streetsidesoftware.code-spell-checker", 
-        "timonwong.shellcheck", 
-        "undefined_publisher.python-extension-pack", 
-        "VisualStudioExptTeam.vscodeintellicode", 
+    "extensionPack": [
+        "redhat.java",
+		"vscjava.vscode-java-debug",
+		"vscjava.vscode-java-dependency",
+		"vscjava.vscode-java-test",
+		"vscjava.vscode-maven",
+		"shengchen.vscode-checkstyle", 
+		"dhruv.maven-dependency-explorer", 
+
         "vscjava.vscode-gradle", 
-        "vscjava.vscode-java-debug", 
-        "vscjava.vscode-java-dependency", 
-        "vscjava.vscode-java-pack", 
-        "vscjava.vscode-java-test", 
-        "vscjava.vscode-maven", 
-        "wholroyd.jinja", 
-        "yzhang.markdown-all-in-one"
+		"naco-siren.gradle-language"
     ]
 }
