--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     ],
     "repository": {
 		"type": "git",
-		"url": "https://github.com/mbeps/java-extension-pack"
+		"url": "https://github.com/mbeps/maruf.java-language-module"
 	},
     "extensionPack": [
         "redhat.java",
